# gh-testing

./: .gitignore  .pylintrc  README.md  pyproject.toml  ruff.toml
.github/: FUNDING.yml
.github/actions/setup-environment/: action.yml
.github/workflows/: documentation.yml  push.yml  unittests.yml
docs/sphinx/: api.rst  conf.py  git.py  index.rst  test_reports.rst
docs/sphinx/_templates/: footer.html
docs/sphinx/_templates/autosummary/: module.rst
docs/sphinx/test_reports/: code_coverage.rst  doc_coverage.rst
src/gh_testing/: __init__.py  __main__.py
src/project_meta/: __init__.py  git_info.py  project_info.py  project_info_pkg.py  project_info_pyproject.py
