[project]
name = "gh-testing"
description = "Github testing project"
authors = [ {name = "sah0la"}]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/sah0la/gh-testing"

[project.scripts]
#gh-postinstall = "gh-testing.scripts.postinstall:main"
gh-testing = "gh_testing.__main__:main"

[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

#[tool.setuptools.package-data]
#"gh-testing.config" = ["data.cfg"]


[tool.uv]
default-groups = "all"

[dependency-groups]
test = [
]
dev = [
    "pytest>=8.0.0, <9.0.0",
    "pytest-subtests", # To show subtest names in pytest output
    "ruff>=0.11.11,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "coverage>=7.0.0,<8.0.0",
    "pylint>=3.0.0,<4.0.0",
    # Sphinx dependencies for documentation generation
    "sphinx==8.2.3",
    "sphinx-lint==1.0.0",
    "sphinx-rtd-theme==3.0.2",
    "sphinx_reports==0.9.7", # https://github.com/pyTooling/sphinx-reports
    "enum-tools[sphinx]==0.13.0", # For better enum support in Sphinx
    "gitpython==3.1.45",
]


[tool.pytest.ini_options]
pythonpath = "src"
log_cli = true
log_cli_level = "WARN"
console_output_style = "count"

[tool.coverage.run]
source = ["src"]
branch = true
command_line = "-m pytest"
data_file = "docs/_build/.coverage"

[tool.coverage.html]
directory = "docs/_build/extra/htmlcov"

[tool.coverage.report]
show_missing = true

[tool.coverage.json]
output = "docs/_build/coverage.json"

# See mypy.ini for mypy configuration
# See ruff.toml and ruff-dev.toml for ruff configurations
# See .pylintrc for pylint configuration
